--- a/src/app/features/datatable/datatable.component.html
+++ b/src/app/features/datatable/datatable.component.html
@@ -18,10 +18,20 @@
                     </th>
                 </ng-container>
                 <td mat-cell *matCellDef="let element  let i = index" class="col-data">
-                    <div>
-                        <div class="column-overflow" *ngIf="tableColumn.type !== 'image' && tableColumn.label !== 'Skill'">
-                            {{ element | dataPropertyGetter : tableColumn.name }}
-                        </div>
+                    <div class="column-overflow"
+                        *ngIf="tableColumn.type !== 'image' && tableColumn.label !== 'Skill' && tableColumn.type !== 'date' ">
+                        {{ element | dataPropertyGetter : tableColumn.name }}
+                    </div>
+                    <div *ngIf="tableColumn.type === 'image' && tableColumn.label !== 'Image Data' ">
+                        <img [src]="element.image" alt="Item Image" class="item-image"
+                            style="max-width: 100px; max-height: 100px;" />
+                    </div>
+                    <div *ngIf="tableColumn.type === 'date' ">
+                        {{ element[tableColumn.name] | date:'M/d/yyyy, h:mm a' }}
+                    </div>
+                    <div *ngIf="tableColumn.label === 'Image Data'">
+                        <img [src]="'data:image/jpeg;base64,' + element.image" alt="Item Image" class="item-image"
+                            style="max-width: 100px; max-height: 100px;" />
                     </div>
                     <div *ngIf="tableColumn.type === 'image'">
                         <img [src]="element.image" alt="Item Image" class="item-image"
@@ -38,7 +48,7 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row @fadeInUp *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
-    
+
         <mat-paginator #paginator *ngIf="isPageable" [pageSizeOptions]="paginationSizes" [pageSize]="defaultPageSize">
         </mat-paginator>
     </div>
