--- a/src/app/features/view-unclaim/view-unclaim.component.html
+++ b/src/app/features/view-unclaim/view-unclaim.component.html
@@ -1,6 +1,6 @@
 <div class="min-h-screen flex flex-col">
   <div class="flex-none px-gutter pt-5 pb-5  bg-[#E8F2F3] ">
-    <div @fadeInRight class="flex flex-row justify-between px-5">
+    <div class="flex flex-row justify-between px-5">
       <div class="flex flex-col">
         <h1 class="font-semibold max-w-3xs mr-6 text-2xl">View / Unclaim Item</h1>
 
@@ -8,7 +8,7 @@
     </div>
     <div class="flex-grow px-5">
       <mat-card class="w-full">
-        <mat-accordion @fadeInUp>
+        <mat-accordion>
           <mat-expansion-panel hideToggle [expanded]="false" (opened)="containerPanelOpened = true"
             (closed)="containerPanelOpened = false">
             <mat-expansion-panel-header>
