--- a/src/app/features/search-claim/search-claim.component.html
+++ b/src/app/features/search-claim/search-claim.component.html
@@ -98,15 +98,15 @@
   <div class="min-h-screen flex flex-col">
     <mat-tab label="Category">
       <div class="flex-none px-gutter pt-5 pb-5  bg-[#E8F2F3] ">
-        <div class="flex flex-row justify-between px-5">
+        <!-- <div class="flex flex-row justify-between px-5">
           <div class="flex flex-col">
             <h1 class="font-semibold max-w-3xs mr-6 text-2xl">Select Category</h1>
           </div>
-        </div>
-        <div class="flex-grow px-5">
-          <div class="flex p-4 bg-white">
+        </div> -->
+        <div >
+          <div class=" flex-grow  px-5">
             <!-- Left Section: Accordion -->
-            <mat-card class="flex-grow bg-white shadow-md p-4">
+            <mat-card class="w-full">
               <mat-accordion>
                 <mat-expansion-panel hideToggle [expanded]="false" (opened)="containerPanelOpened = true"
                   (closed)="containerPanelOpened = false">
