--- a/src/app/features/add-item/add-item.component.html
+++ b/src/app/features/add-item/add-item.component.html
@@ -1,1 +1,13 @@
-<p>add-item works!</p>
+
+
+<!-- Plus Icon for Image Upload -->
+<button (click)="fileInput.click()" class="upload-button">
+  <i class="fas fa-plus"></i> Upload Image
+</button>
+
+<!-- Hidden file input element -->
+<input type="file" #fileInput (change)="onFileSelected($event)" style="display: none;" accept="image/*">
+
+<div class="flex-grow mt-2 mx-3">
+    <app-footer></app-footer>
+  </div>
